--- a/webroot/css/side.css
+++ b/webroot/css/side.css
@@ -1,3 +1,10 @@
 .school_information_footer_school_name{
     font-size: 2em;
 }
+.school_information_side_image {
+    text-align: center;
+    margin-bottom: 10px;
+}
+.school_information_side_school_name {
+    font-size: large;
+}
