WIP: 表示タイプは配置されてるboxのcontainer_typeを元に判定するように変更した

--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -1,3 +1,19 @@
 .school_information_main_table th{
     width:160px;
 }
+
+.school-information-center-title {
+    display:flex;
+}
+.school-information-center-title .school-information-school-badge {
+    margin-right: 5px;
+}
+.school-information-center rt{
+    font-size: 12px;
+}
+.school-information-center .school-information-school-name-roma {
+    font-size:12px;
+}
+.school-information-center .school-information-school-name-roma:before{
+    display: block;
+}
