--- a/webroot/css/header.css
+++ b/webroot/css/header.css
@@ -1,16 +1,18 @@
-.school-information-header-title {
+.school-information-header {
     display:flex;
     align-items: center;
 }
-.school-information-header-title .school-information-school-badge {
+
+.school-information-header .school-information-header-school-badge {
     margin-right: 5px;
 }
-.school-information-header rt{
+h1.school-information-header-title {
+    margin: 0;
+}
+
+.school-information-header-title rt{
     font-size: 12px;
 }
-.school-information-header .school-information-school-name-roma {
+.school-information-header-title .school-information-school-name-roma {
     font-size:12px;
-}
-.school-information-header .school-information-school-name-roma:before{
-    display: block;
 }
