Fix: フッタにtel, faxのラベルがでてなかったのを修正

--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -17,3 +17,6 @@
 .school-information-center .school-information-school-name-roma:before{
     display: block;
 }
+.school-information-center .school-information-postal-code{
+    display: block;
+}
