--- a/webroot/css/footer.css
+++ b/webroot/css/footer.css
@@ -21,6 +21,10 @@
 }
 
 
-.school-information-label:after {
+.school-information-footer .school-information-label:after {
     content: ":";
+}
+
+.school-information-footer-sub-items span.school-information-record-item {
+    margin-right: 5px;
 }
