--- a/webroot/css/header.css
+++ b/webroot/css/header.css
@@ -1,17 +1,64 @@
+.school-information-header-outer {
+	position: relative;
+	height: 180px;
+	overflow: hidden;
+}
+
 .school-information-header {
-    display:flex;
+	position: relative;
+    display: flex;
     align-items: center;
 	height: 180px;
-/*	width: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;*/
+	width: 100%;
+	left: 0;
 	padding-left: 16px;
-	background: linear-gradient(rgba(0,0,0, .50), rgba(0,0,0,0) 50%);
+	/*background: linear-gradient(rgba(0,0,0, .5), rgba(0,0,0,0) 50%);*/
+	/*background-color: transparent;*/
+	text-shadow: 0px 0px 1px #000, 1px 1px 1px rgba(0,0,0,0.5);
+}
+
+.school-cover-picture {
+	position: absolute;
+	/*top: 0;*/
+/*	height: 100%;
+	width: 100%;*/
+	/*overflow: hidden;*/
+}
+
+.school-cover-picture img {
+	/*position: absolute;*/
+/*	width: 100%;
+	height: 180px;*/
+	/*height: 100%;*/
+	/*: 100%;*/
+	/*top: 0;*/
+	/*left: 0;*/
+	/*opacity: 0.6;*/
+	text-align: center;
+	vertical-align: middle;
+}
+
+.school-cover-picture-back {
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*width: 100%;*/
+    /*height: 300px;*/
+    /*background: linear-gradient(rgba(0,0,0, .50), rgba(0,0,0,0) 36%);*/
 }
 
 .school-information-header .school-information-header-school-badge {
-    margin-right: 10px;
+	margin-left: 10px;
+	margin-right: 28px;
+	background-color: #fff;
+	border-radius: 2px;
+	border: 2px solid #e2e2e2;
+	height: 120px;
+	width: 120px;
+	/*position: relative;*/
+    display: flex;
+	align-items: center;
+	justify-content: center;
 }
 h1.school-information-header-title {
     margin: 0;
