--- a/webroot/css/header.css
+++ b/webroot/css/header.css
@@ -1,6 +1,6 @@
 .school-information-header-outer {
 	position: relative;
-	height: 180px;
+	/*height: 180px;*/
 	overflow: hidden;
 }
 
@@ -8,10 +8,10 @@
 	position: relative;
     display: flex;
     align-items: center;
-	height: 180px;
+	/*height: 180px;*/
 	width: 100%;
 	left: 0;
-	padding-left: 16px;
+	padding: 16px;
 	/*background: linear-gradient(rgba(0,0,0, .5), rgba(0,0,0,0) 50%);*/
 	/*background-color: transparent;*/
 	text-shadow: 0px 0px 1px #000, 1px 1px 1px rgba(0,0,0,0.5);
@@ -48,13 +48,14 @@
 }
 
 .school-information-header .school-information-header-school-badge {
-	margin-left: 10px;
+	margin-left: 28px;
 	margin-right: 28px;
+	padding: 4px;
 	background-color: #fff;
 	border-radius: 2px;
 	border: 2px solid #e2e2e2;
-	height: 120px;
-	width: 120px;
+	max-height: 156px;
+	max-width: 156px;
 	/*position: relative;*/
     display: flex;
 	align-items: center;
@@ -65,15 +66,97 @@ h1.school-information-header-title {
 }
 
 .school-information-header-title .school-information-school-name-kana {
-    font-size: 14px;
-	line-height: 28px;
+	/*font-size: 14px;*/
+	/*line-height: 28px;*/
+	margin-bottom: 4px;
 }
 .school-information-header-title .school-information-school-name-roma {
-    font-size: 12px;
-	line-height: 24px;
-	margin-bottom: 8px;
+    /*font-size: 12px;*/
+	/*line-height: 24px;*/
+	margin-top: 4px;
 }
-/*
-.school-information-header .school-information-location {
-    display: inline;
-}*/
+
+@media (max-width: 383px) {
+	.school-information-header .school-information-header-text h1 {
+		font-size: 1.4em;
+	}
+	.school-information-header-title .school-information-school-name-kana {
+		display: none;
+	}
+	.school-information-header-title .school-information-school-name-roma {
+		display: none;
+	}
+}
+@media (min-width: 384px) {
+	.school-information-header .school-information-header-text h1 {
+		font-size: 1.8em;
+	}
+	.school-information-header-title .school-information-school-name-kana {
+		display: none;
+	}
+	.school-information-header-title .school-information-school-name-roma {
+		display: none;
+	}
+}
+@media (min-width: 480px) {
+	.school-information-header .school-information-header-text h1 {
+		font-size: 2.0em;
+	}
+	.school-information-header-title .school-information-school-name-kana {
+		display: none;
+	}
+	.school-information-header-title .school-information-school-name-roma {
+		display: none;
+	}
+}
+@media (min-width: 640px) {
+	.school-information-header .school-information-header-text h1 {
+		font-size: 1.8em;
+	}
+	.school-information-header-title .school-information-school-name-kana {
+		font-size: 12px;
+		display: block;
+	}
+	.school-information-header-title .school-information-school-name-roma {
+		display: none;
+	}
+}
+@media (min-width: 768px) {
+	.school-information-header .school-information-header-text h1 {
+		font-size: 2.0em;
+	}
+	.school-information-header-title .school-information-school-name-kana {
+		font-size: 14px;
+		display: block;
+	}
+	.school-information-header-title .school-information-school-name-roma {
+		font-size: 12px;
+		display: block;
+	}
+}
+@media (min-width: 992px) {
+	.school-information-header .school-information-header-text h1 {
+		font-size: 2.4em;
+	}
+	.school-information-header-title .school-information-school-name-kana {
+		font-size: 14px;
+		display: block;
+	}
+	.school-information-header-title .school-information-school-name-roma {
+		font-size: 12px;
+		display: block;
+	}
+}
+@media (min-width: 1200px) {
+	.school-information-header .school-information-header-text h1 {
+		font-size: 2.6em;
+	}
+	.school-information-header-title .school-information-school-name-kana {
+		font-size: 14px;
+		display: block;
+	}
+	.school-information-header-title .school-information-school-name-roma {
+		font-size: 12px;
+		display: block;
+	}
+}
