カバー写真はデフォルトなしにするように修正

--- a/webroot/css/header.css
+++ b/webroot/css/header.css
@@ -2,6 +2,10 @@
 	position: relative;
 	/*height: 180px;*/
 	overflow: hidden;
+	color: #fff;
+}
+.school-information-header-outer.Default.navbar-inverse {
+	background-color: #337ab7;
 }
 
 .school-information-header {
