--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -10,11 +10,15 @@
 	/*line-height: 28px;*/
 }
 
+.school-information-center ruby {
+	/*ruby-align: center;*/
+}
+
 .school-information-center-title .school-information-school-badge {
     margin-right: 8px;
 }
 .school-information-center rt{
-    font-size: 12px;
+    font-size: 10px;
 }
 .school-information-center .school-information-school-name-roma {
     font-size:12px;
