change: ヘッダーのデフォルト値を設定

--- a/webroot/css/header.css
+++ b/webroot/css/header.css
@@ -4,7 +4,7 @@
 	overflow: hidden;
 	color: #fff;
 }
-.school-information-header-outer.Default.navbar-inverse {
+.school-information-header-outer.navbar-inverse {
 	background-color: #337ab7;
 }
 
