--- a/webroot/css/header.css
+++ b/webroot/css/header.css
@@ -41,7 +41,12 @@
 	/*opacity: 0.6;*/
 	text-align: center;
 	vertical-align: middle;
+}
+img.school-cover-picture-fixed-height {
 	height: 180px;
+}
+img.school-cover-picture-fixed-width {
+	height: 1200px;
 }
 
 .school-cover-picture-back {
