change: 保育園・幼稚園・認定こども園の場合のラベル変更 https://github.com/edumap-jp/Edumap2/issues/66

--- a/webroot/css/header.css
+++ b/webroot/css/header.css
@@ -177,3 +177,7 @@ h1.school-information-header-title {
 .school-information-header .school-information-label:after {
     content: ":";
 }
+
+.school-information-header-sub-items span.school-information-record-item {
+    margin-right: 5px;
+}
