change: 公開状態が変更できなくなってしまったので再修正 https://github.com/edumap-jp/Edumap2/issues/119

--- a/webroot/css/edit.css
+++ b/webroot/css/edit.css
@@ -1,6 +1,12 @@
 .school-information-form-group {
 	margin-bottom: 16px;
 }
+.school-information-form-location-group {
+	margin-bottom: 16px;
+}
+.school-information-form-location-group .form-radio-outer .radio:first-child {
+	padding-left: 0;
+}
 .school-information-form-group .help-block {
 	margin-bottom: 4px;
 }
